--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -39,9 +39,36 @@
 }
 
 .btn-fucsia {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
   background-color: #ff65c5;
-  border: none;
-  color: white;
+  border: 2px solid #ff65c5;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
+    -webkit-box-shadow 0.15s ease-in-out;
+}
+
+.btn-fucsia:hover {
+  border: 2px solid #00ffff;
+  color: #fff;
+}
+
+.btn {
+  border: 2px solid transparent;
+}
+
+.btn:hover {
+  border: 2px solid #ff65c5;
+  color: #fff;
 }
 
 .bg-fucsia {
