--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,10 @@
   --swiper-theme-color: #fff;
 }
 
+img, svg {
+  vertical-align: baseline;
+}
+
 .swiper-pagination-bullet {
   opacity: 0.5;
   background-color: #fff;
@@ -48,17 +52,15 @@
   cursor: pointer;
   user-select: none;
   background-color: #ff65c5;
-  border: 2px solid #ff65c5;
+  border: 4px solid #ff65c5;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  border-radius: 0;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out;
+  border-radius: 5%;
+  transition: all 0.3s ease-in-out;
 }
 
 .btn-fucsia:hover {
-  border: 2px solid #00ffff;
+  border-color: #d30b8acb;
   color: #fff;
 }
 
@@ -67,8 +69,12 @@
 }
 
 .btn:hover {
-  border: 2px solid #ff65c5;
+  border: 2px solid #d30b8acb;
   color: #fff;
+}
+
+.bg-pink{
+  background-color:#FADDE1;
 }
 
 .bg-fucsia {
@@ -87,16 +93,29 @@
   .w-md-50 {
     width: 50%;
   }
+
+  .flex-auto{
+    max-width: 150px;
+  }
 }
+  
 
 @media (max-width: 768px) {
   :root {
     --swiper-theme-color: transparent;
+  }
+
+  .flex-auto{
+    max-width: 300px;
   }
 }
 
 @media (max-width: 425px) {
   .w-md-100 {
     width: 100%;
+  }
+  
+  .flex-auto{
+    max-width: 300px;
   }
 }
