--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,14 @@ img, svg {
   vertical-align: baseline;
 }
 
+.card-body {
+  padding: 1rem 0rem;
+}
+
+.card-body img,svg {
+  vertical-align: none;
+}
+
 .swiper-pagination-bullet {
   opacity: 0.5;
   background-color: #fff;
