--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,6 +16,10 @@ img, svg {
   vertical-align: none;
 }
 
+h1 {
+  margin:0;
+}
+
 .swiper-pagination-bullet {
   opacity: 0.5;
   background-color: #fff;
